--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -11,6 +11,10 @@
     margin-top: 5px;
 }
 
+.mr-5{
+    margin-right: 5px;
+}
+
 .ant-form-item-label > label::after{
     content: none !important;
 }
