--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,22 @@
-<div>
-  <button nz-button nzType="primary" (click)="openAddForm()">New Task</button>
+<div nzSpan="24" class="alain-center">
+  <h3>To Do List</h3>
+</div>
+<div nzSpan="24">
+  <div nz-row [nzGutter]="10">
+    <div nz-col [nzXs]="{ span: 24 }" [nzLg]="{ span: 12 }">
+      <button nz-button nzType="primary" (click)="openAddForm()">
+        New Task
+      </button>
+    </div>
+    <div nz-col [nzXs]="{ span: 24 }" [nzLg]="{ span: 12 }">
+      <input
+        nz-input
+        placeholder="Search ..."
+        [(ngModel)]="filterValue"
+        (keydown)="doSearch($event)"
+      />
+    </div>
+  </div>
 </div>
 <div>
   <table class="table">
@@ -17,9 +34,33 @@
         </td>
         <td>{{ data.title }}</td>
         <td>
-          <button nz-button nzType="primary" nzShape="round" (click)="openUpdateForm(data)" class="mr-5">
-            Detail</button
-          ><button nz-button nzType="danger" nzShape="round" (click)="removeItem(i)">Remove</button>
+          <button
+            nz-button
+            nzType="primary"
+            nzShape="round"
+            (click)="openUpdateForm(data)"
+            class="mr-5"
+            *ngIf="data.showDone == 0"
+          >
+            Detail
+          </button>
+          <button
+            nz-button
+            *ngIf="data.showDone == 1"
+            (click)="changeToDone()"
+            nzType="primary"
+            nzShape="round"
+            class="mr-5"
+          >
+            Done</button
+          ><button
+            nz-button
+            nzType="danger"
+            nzShape="round"
+            (click)="removeItem(i)"
+          >
+            Remove
+          </button>
         </td>
       </tr>
     </tbody>
