--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,36 +1,43 @@
-.alain-center{
-    text-align: center;
+.default-color {
+  background-color: white;
+}
+.selected-color {
+  background-color: #dcdcdc;
 }
 
-.float-right{
-    float: right !important;
-    cursor: pointer;
+.alain-center {
+  text-align: center;
 }
 
-.mt-5{
-    margin-top: 5px;
+.float-right {
+  float: right !important;
+  cursor: pointer;
 }
 
-.mr-5{
-    margin-right: 5px;
+.mt-5 {
+  margin-top: 5px;
 }
 
-.ant-form-item-label > label::after{
-    content: none !important;
+.mr-5 {
+  margin-right: 5px;
 }
 
-.min-width-100{
-    min-width: 100px !important;
+.ant-form-item-label > label::after {
+  content: none !important;
 }
 
-.width-100{
-    width: 100% !important;
+.min-width-100 {
+  min-width: 100px !important;
 }
 
 .width-100 {
-    .ant-btn-primary {
-      background-color: green;
-      border-color: green;
-      width: 100%;
-    }
+  width: 100% !important;
+}
+
+.width-100 {
+  .ant-btn-primary {
+    background-color: green;
+    border-color: green;
+    width: 100%;
   }
+}
